# cpp-coverage

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  temp.txt
cmake/: cmake_utils.cmake  cpp_coverage.cmake
examples/: CMakeLists.txt
examples/01_getting_started/: CMakeLists.txt
examples/01_getting_started/include/sortlib/: sortlib.hpp
examples/01_getting_started/src/: sortlib.cpp  utils.cpp  utils.hpp
examples/01_getting_started/test/: sortlib_test.cpp
examples/02_multiple_targets/: CMakeLists.txt
examples/02_multiple_targets/include/extended_sortlib/: extended_sortlib.hpp
examples/02_multiple_targets/src/: extended_sortlib.cpp  mergesort.cpp  mergesort.hpp
examples/02_multiple_targets/test/: extended_sortlib_test.cpp  mergesort_test.cpp
examples/03_sub_project/: CMakeLists.txt
examples/03_sub_project/include/sub_project/: sub_project.hpp
examples/03_sub_project/src/: sub_project.cpp
examples/03_sub_project/test/: sub_project_test.cpp
